--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,41 +3,39 @@ version: '3.8'
 services:
   # NestJS Service
   app:
-    image: node:18  # Lighter image
-    container_name: nest_app
-    working_dir: /app
-    volumes:
-      - .:/app
-      - /app/node_modules  # Consider a named volume for stability
-    command: npm run start:dev
+    build: ./
+    restart: unless-stopped
+    env_file: ./.env
     ports:
-      - "3002:3000"  # Maps localhost:3002 to NestJS app port 3000
+      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
     depends_on:
-      - db
+      - mysqldb
     environment:
       - DATABASE_HOST=db
       - DATABASE_PORT=3306
       - DATABASE_USER=root
       - DATABASE_PASSWORD=secret
       - DATABASE_NAME=nestjs_db
-    # restart: always
-  
-  # MySQL Database Service
-  db:
-    image: mysql:8.0
-    container_name: mysql_db
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: nestjs_db
     volumes:
-      - db_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
+      - ./:/app
+      # - /app/node_modules
+
+  mysqldb:
+    image: mysql:5.7
+    restart: unless-stopped
+    env_file: ./.env
+    environment:
+      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+      - MYSQL_DATABASE=$MYSQLDB_DATABASE
+    ports:
+      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+    volumes:
+      - ./db:/var/lib/mysql
+    # healthcheck:
+    #   test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 3
 
 volumes:
   db_data:
